--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>cv</title>
+  <title>Mice Pápai CV</title>
   <link rel="stylesheet" type="text/css" href="css/q.min.css">
   <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
   <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
@@ -11,7 +11,198 @@
 
 </head>
 <body>
-  <img src="img/q.svg">
   <script src="js/q.js"></script>
+
+  <div class="header">
+    <img src="/img/portrait_bw.jpg" class="portrait">
+    <h1 class="title"><a id="user-content-mice-pápai" class="anchor" href="#mice-p%C3%A1pai" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Mice Pápai</h1>
+  </div>
+
+  <div class="main-content">
+  <div class="column">
+  <h2>
+  <a id="user-content-skills" class="anchor" href="#skills" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Skills</h2>
+  <h3>
+  <a id="user-content-proficient" class="anchor" href="#proficient" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Proficient</h3>
+  <ul>
+    <li>Python</li>
+    <li>PHP</li>
+    <li>CSS (sass) / HTML5</li>
+    <li>Linux (mainly debian)</li>
+  </ul>
+  <h3>
+  <a id="user-content-comfortable" class="anchor" href="#comfortable" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Comfortable</h3>
+  <ul>
+    <li>Git</li>
+    <li>SQL (MySQL, PostgreSQL)</li>
+    <li>Javascript</li>
+    <li>Java (mainly Android)</li>
+  </ul>
+  <h3>
+  <a id="user-content-familiar" class="anchor" href="#familiar" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Familiar</h3>
+  <ul>
+    <li>R</li>
+    <li>Racket</li>
+    <li>Nim</li>
+    <li>Windows</li>
+  </ul>
+  <h3>
+  <a id="user-content-others" class="anchor" href="#others" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Others</h3>
+  <ul>
+    <li>Pharmacology / Biology</li>
+    <li>Analog / Digital Photography</li>
+    <li>Photomanipulation</li>
+    <li>Vector graphics</li>
+    <li>Video editing</li>
+    <li>Laser cutting (GRBL)</li>
+    <li>Adwords / Adsense / Analytics</li>
+  </ul>
+  <h2>
+  <a id="user-content-languages" class="anchor" href="#languages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Languages</h2>
+  <ul>
+    <li>Native: Hungarian</li>
+    <li>Advanced: English</li>
+  </ul>
+
+
+  <h3>
+  <a id="user-content-libraries-and-frameworks" class="anchor" href="#libraries-and-frameworks" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Libraries and Frameworks</h3>
+
+  <ul>
+    <li>Django, Flask and AIOHTTP</li>
+    <li>PyTest and Hypothesis</li>
+    <li>BeautifulSoup, Selenium</li>
+    <li>Pandas, Scikit-learn</li>
+    <li>Shapely / Fiona</li>
+    <li>OpenCV</li>
+    <li>Arcpy</li>
+    <li>Caffe</li>
+    <li>Kivy</li>
+  </ul>
+
+</div>
+
+
+<div class="column">
+
+  <h2>
+  <a id="user-content-experience" class="anchor" href="#experience" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Experience</h2>
+  <ul>
+    <li>Recommender systems</li>
+    <li>Machine learning (e.g. decision trees, neural nets, natural language analysis)</li>
+    <li>Data visualization / plots</li>
+    <li>Data mining / webscraping</li>
+    <li>Bioinformatics</li>
+    <li>Chrome extensions</li>
+    <li>Anki plugins</li>
+    <li title="951254_jAI9nTAjpXMOjMVTxGduFdADtBtdw95q">Project Euler</li>
+    <li>APIs (e.g. Steem, Last.fm, Reddit, Tumblr, Twitter, Ebay, Flickr, MS Azure, Instagram, Facebook, Google APIs)</li>
+    <li>Gephi</li>
+  </ul>
+
+  <h2>
+  <a id="user-content-freelance-projects-2016-2018" class="anchor" href="#freelance-projects-2016-2018" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Freelance projects (2016-2018)</h2>
+  <h2>
+  <a id="user-content-education" class="anchor" href="#education" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Education</h2>
+  <h3>
+  <a id="user-content-university" class="anchor" href="#university" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>University</h3>
+  <ul>
+    <li>Semmelweis University, Pharmacology (2015)</li>
+    <li>ELTE, Chemistry (2014)</li>
+  </ul>
+  <h3>
+  <a id="user-content-high-school" class="anchor" href="#high-school" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>High School</h3>
+  <h4>
+  <a id="user-content-2009-2014-szent-lászló-gimnázium" class="anchor" href="#2009-2014-szent-l%C3%A1szl%C3%B3-gimn%C3%A1zium" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>2009-2014: Szent László Gimnázium</h4>
+  <ul>
+    <li>2012-2014: Informatics</li>
+    <li>2009-2012: Mass Communication</li>
+  </ul>
+  <h4>
+  <a id="user-content-exit-exam-results" class="anchor" href="#exit-exam-results" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Exit Exam Results</h4>
+
+  <input type="checkbox" class="show-exam-results" id="show-exam-results">
+  <label for="show-exam-results"></label>
+
+  <table class="exam-results">
+    <thead>
+      <tr>
+        <th align="left">Subject</th>
+        <th align="left">Level</th>
+        <th align="right">%</th>
+        <th align="right">Grade</th>
+        <th align="right">Year</th>
+        <th align="left">Comment</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td align="left">Biology</td>
+        <td align="left">advanced</td>
+        <td align="right">83</td>
+        <td align="right">5</td>
+        <td align="right">2015</td>
+        <td align="left">required for SOTE Pharmacology</td>
+      </tr>
+      <tr>
+        <td align="left">Informatics</td>
+        <td align="left">advanced</td>
+        <td align="right">86</td>
+        <td align="right">5</td>
+        <td align="right">2014</td>
+        <td align="left">100% verbal exam</td>
+      </tr>
+      <tr>
+        <td align="left">Chemistry</td>
+        <td align="left">advanced</td>
+        <td align="right">68</td>
+        <td align="right">5</td>
+        <td align="right">2014</td>
+        <td align="left">required for ELTE Chemistry</td>
+      </tr>
+      <tr>
+        <td align="left">English</td>
+        <td align="left">basic</td>
+        <td align="right">92</td>
+        <td align="right">5</td>
+        <td align="right">2014</td>
+        <td align="left">-</td>
+      </tr>
+      <tr>
+        <td align="left">Hungarian</td>
+        <td align="left">basic</td>
+        <td align="right">91</td>
+        <td align="right">5</td>
+        <td align="right">2014</td>
+        <td align="left">-</td>
+      </tr>
+      <tr>
+        <td align="left">Mathematics</td>
+        <td align="left">basic</td>
+        <td align="right">81</td>
+        <td align="right">5</td>
+        <td align="right">2014</td>
+        <td align="left">-</td>
+      </tr>
+      <tr>
+        <td align="left">History</td>
+        <td align="left">basic</td>
+        <td align="right">65</td>
+        <td align="right">4</td>
+        <td align="right">2014</td>
+        <td align="left">-</td>
+      </tr>
+    </tbody>
+  </table>
+
+  <h2>Contact</h2>
+  <p>
+    +36 70 632 51 38<br />
+    <a href="mailto:qwhexz@gmail.com">qwhexz@gmail.com</a>
+  </p>
+
+  </div>
+  </div>
+
 </body>
 </html>
