Add cookie consent

--- a/index.html
+++ b/index.html
@@ -9,6 +9,29 @@
   <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="96x96" href="img/favicon-96x96.png">
 
+  <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.css" />
+  <script src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.js"></script>
+  <script>
+  window.addEventListener("load", function(){
+  window.cookieconsent.initialise({
+    "palette": {
+      "popup": {
+        "background": "#161816",
+        "text": "#f7fbfc"
+      },
+      "button": {
+        "background": "#f71559"
+      }
+    },
+    "theme": "edgeless",
+    "position": "bottom-left",
+    "content": {
+      "message": "I know how to use cookies.",
+      "dismiss": "Ok..."
+    }
+  })});
+  </script>
+
 </head>
 <body>
 
@@ -41,26 +64,27 @@
   <a id="user-content-familiar" class="anchor" href="#familiar" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Familiar</h3>
   <ul>
     <li>R</li>
-    <li>Racket</li>
+    <li>Racket (Scheme)</li>
     <li>Nim</li>
     <li>Windows</li>
   </ul>
   <h3>
   <a id="user-content-others" class="anchor" href="#others" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Others</h3>
   <ul>
-    <li>Pharmacology / Biology</li>
     <li>Analog / Digital Photography</li>
     <li>Photomanipulation</li>
     <li>Vector graphics</li>
     <li>Video editing</li>
     <li>Laser cutting (GRBL)</li>
     <li>Adwords / Adsense / Analytics</li>
+    <li>Pharmacology / Biology</li>
   </ul>
   <h2>
   <a id="user-content-languages" class="anchor" href="#languages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Languages</h2>
   <ul>
     <li>Native: Hungarian</li>
     <li>Advanced: English</li>
+    <li>Basic: Spanish</li>
   </ul>
 
 
