Optimize for cell phones

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Mice Pápai CV</title>
   <link rel="stylesheet" type="text/css" href="css/q.min.css">
   <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
