Add tooltip, header color; refactor

--- a/index.html
+++ b/index.html
@@ -6,71 +6,66 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Mice Pápai CV</title>
   <link rel="stylesheet" type="text/css" href="css/q.min.css">
-  <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="img/favicon-96x96.png">
+
+  <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="favicon/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="favicon/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="favicon/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="favicon/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="favicon/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192"  href="favicon/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="favicon/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+  <link rel="manifest" href="favicon/manifest.json">
+  <meta name="msapplication-TileColor" content="#161816">
+  <meta name="msapplication-TileImage" content="/favicon/ms-icon-144x144.png">
+  <meta name="theme-color" content="#161816">
 
   <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.css" />
   <script src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.js"></script>
-  <script>
-  window.addEventListener("load", function(){
-  window.cookieconsent.initialise({
-    "palette": {
-      "popup": {
-        "background": "#161816",
-        "text": "#f7fbfc"
-      },
-      "button": {
-        "background": "#f71559"
-      }
-    },
-    "theme": "edgeless",
-    "position": "bottom-left",
-    "content": {
-      "message": "I know how to use cookies.",
-      "dismiss": "Ok..."
-    }
-  })});
-  </script>
-
+  <script src="js/q.js"></script>
 </head>
 <body>
 
   <div class="header">
     <img src="/img/portrait_bw.jpg" class="portrait">
-    <h1 class="title"><a id="user-content-mice-pápai" class="anchor" href="#mice-p%C3%A1pai" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Mice Pápai</h1>
+    <h1 class="title"><a id="section-mice-pápai" class="anchor" href="#mice-p%C3%A1pai" aria-hidden="true"><span class="section"></span></a>Mice Pápai</h1>
   </div>
 
   <div class="main-content">
   <div class="column">
   <h2>
-  <a id="user-content-skills" class="anchor" href="#skills" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Skills</h2>
+  <a id="section-skills" class="anchor" href="#skills" aria-hidden="true"><span class="section"></span></a>Skills</h2>
   <h3>
-  <a id="user-content-proficient" class="anchor" href="#proficient" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Proficient</h3>
+  <a id="section-proficient" class="anchor" href="#proficient" aria-hidden="true"><span class="section"></span></a>Proficient</h3>
   <ul>
     <li>Python</li>
     <li>PHP</li>
-    <li>CSS (sass) / HTML5</li>
+    <li>Javascript</li>
     <li>Linux (mainly debian)</li>
   </ul>
   <h3>
-  <a id="user-content-comfortable" class="anchor" href="#comfortable" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Comfortable</h3>
+  <a id="section-comfortable" class="anchor" href="#comfortable" aria-hidden="true"><span class="section"></span></a>Comfortable</h3>
   <ul>
     <li>Git</li>
     <li>SQL (MySQL, PostgreSQL)</li>
-    <li>Javascript</li>
-    <li>Java (mainly Android)</li>
+    <li>CSS (sass) / HTML5</li>
+    <li>MacOS</li>
   </ul>
   <h3>
-  <a id="user-content-familiar" class="anchor" href="#familiar" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Familiar</h3>
+  <a id="section-familiar" class="anchor" href="#familiar" aria-hidden="true"><span class="section"></span></a>Familiar</h3>
   <ul>
-    <li>R</li>
+    <li>Java (Android)</li>
     <li>Racket (Scheme)</li>
     <li>Nim</li>
     <li>Windows</li>
   </ul>
   <h3>
-  <a id="user-content-others" class="anchor" href="#others" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Others</h3>
+  <a id="section-others" class="anchor" href="#others" aria-hidden="true"><span class="section"></span></a>Others</h3>
   <ul>
     <li>Analog / Digital Photography</li>
     <li>Photomanipulation</li>
@@ -81,69 +76,88 @@
     <li>Pharmacology / Biology</li>
   </ul>
   <h2>
-  <a id="user-content-languages" class="anchor" href="#languages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Languages</h2>
+  <a id="section-languages" class="anchor" href="#languages" aria-hidden="true"><span class="section"></span></a>Languages</h2>
   <ul>
     <li>Native: Hungarian</li>
     <li>Advanced: English</li>
     <li>Basic: Spanish</li>
   </ul>
 
-
   <h3>
-  <a id="user-content-libraries-and-frameworks" class="anchor" href="#libraries-and-frameworks" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Libraries and Frameworks</h3>
+    <a id="section-libraries-and-frameworks" class="anchor" href="#libraries-and-frameworks" aria-hidden="true"><span class="section"></span></a>
+    Libraries and Frameworks
+  </h3>
 
   <ul>
     <li>Django, Flask and AIOHTTP</li>
     <li>PyTest and Hypothesis</li>
     <li>BeautifulSoup, Selenium</li>
     <li>Pandas, Scikit-learn</li>
+    <li>Wordpress</li>
+    <li>PHPUnit</li>
     <li>Shapely / Fiona</li>
     <li>OpenCV</li>
     <li>Arcpy</li>
-    <li>Caffe</li>
     <li>Vue.js</li>
   </ul>
 
 </div>
 
-
 <div class="column">
 
   <h2>
-  <a id="user-content-experience" class="anchor" href="#experience" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Experience</h2>
+  <a id="section-experience" class="anchor" href="#experience" aria-hidden="true"><span class="section"></span></a>Experience</h2>
   <ul>
     <li>Recommender systems</li>
-    <li>Machine learning (e.g. decision trees, neural nets, natural language analysis)</li>
+    <li><span class="tooltip">Machine learning
+      <span>(e.g. decision trees, neural nets, natural language analysis</span>
+    </span></li>
     <li>Data visualization / plots</li>
     <li>Data mining / webscraping</li>
     <li>Bioinformatics</li>
     <li>Chrome extensions</li>
     <li>Anki plugins</li>
-    <li title="951254_jAI9nTAjpXMOjMVTxGduFdADtBtdw95q">Project Euler</li>
-    <li>APIs (e.g. Steem, Last.fm, Reddit, Tumblr, Twitter, Ebay, Flickr, MS Azure, Instagram, Facebook, Google APIs)</li>
+    <li><span class="tooltip">
+      Project Euler
+      <span>951254_jAI9nTAjpXMOjMVTxGduFdADtBtdw95q</span></span></li>
+    <li><span class="tooltip">
+      APIs
+      <span>
+        Last.fm, Reddit, Tumblr, Steem, Ebay, Flickr,<br />
+        Twitter, Instagram, Facebook, Google APIs
+      </span>
+    </span></li>
     <li>Gephi</li>
   </ul>
 
-  <h2>
-  <a id="user-content-freelance-projects-2016-2018" class="anchor" href="#freelance-projects-2016-2018" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Freelance projects (2016-2018)</h2>
-  <h2>
-  <a id="user-content-education" class="anchor" href="#education" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Education</h2>
   <h3>
-  <a id="user-content-university" class="anchor" href="#university" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>University</h3>
+    <a id="section-endless-flux-labs" class="anchor" href="#endless-flux-labs" aria-hidden="true"><span class="section"></span></a>
+    Endless Flux Labs (2018-)
+  </h3>
+
+  <h3>
+    <a id="section-freelance-projects" class="anchor" href="#freelance-projects" aria-hidden="true"><span class="section"></span></a>
+    Freelance projects (2016-2018)
+  </h3>
+
+  <h2>
+  <a id="section-education" class="anchor" href="#education" aria-hidden="true"><span class="section"></span></a>Education</h2>
+  <h3>
+  <a id="section-university" class="anchor" href="#university" aria-hidden="true"><span class="section"></span></a>University</h3>
   <ul>
     <li>Semmelweis University, Pharmacology (2015)</li>
     <li>ELTE, Chemistry (2014)</li>
   </ul>
   <h3>
-  <a id="user-content-high-school" class="anchor" href="#high-school" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>High School</h3>
+  <a id="section-high-school" class="anchor" href="#high-school" aria-hidden="true"><span class="section"></span></a>High School</h3>
   <h4>
-  <a id="user-content-2009-2014-szent-lászló-gimnázium" class="anchor" href="#2009-2014-szent-l%C3%A1szl%C3%B3-gimn%C3%A1zium" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>2009-2014: Szent László Gimnázium</h4>
+  <a id="section-2009-2014-szent-lászló-gimnázium" class="anchor" href="#2009-2014-szent-l%C3%A1szl%C3%B3-gimn%C3%A1zium" aria-hidden="true"><span class="section"></span></a>2009-2014: Szent László Gimnázium</h4>
   <ul>
     <li>2012-2014: Informatics</li>
     <li>2009-2012: Mass Communication</li>
   </ul>
   <h4>
-  <a id="user-content-exit-exam-results" class="anchor" href="#exit-exam-results" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Exit Exam Results</h4>
+  <a id="section-exit-exam-results" class="anchor" href="#exit-exam-results" aria-hidden="true"><span class="section"></span></a>Exit Exam Results</h4>
 
   <input type="checkbox" class="show-exam-results" id="show-exam-results">
   <label for="show-exam-results"></label>
@@ -221,8 +235,9 @@
 
   <h2>Contact</h2>
   <p>
-    +36 70 632 51 38<br />
-    <a href="mailto:qwhexz@gmail.com">qwhexz@gmail.com</a>
+    <a href="tel:+36706325138"><span class="tooltip">Phone<span>+36 70 632 51 38</span></span></a><br />
+    <a href="https://t.me/knockoutMice"><span class="tooltip">Telegram<span>knockoutMice</span></span></a><br />
+    <a href="mailto:qwhexz@gmail.com"><span class="tooltip">Email<span>qwhexz@gmail.com</span></span></a>
   </p>
 
   </div>
