Update index content

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <title>Mice Pápai CV</title>
+
   <link rel="stylesheet" type="text/css" href="css/q.min.css">
 
   <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
@@ -27,7 +29,7 @@
 
   <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.css" />
   <script src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.js"></script>
-  <script src="js/q.js"></script>
+  <script src="js/cookie.js"></script>
 </head>
 <body>
 
@@ -93,7 +95,7 @@
     <li>PyTest and Hypothesis</li>
     <li>BeautifulSoup, Selenium</li>
     <li>Pandas, Scikit-learn</li>
-    <li>Wordpress</li>
+    <li>Wordpress, Drupal</li>
     <li>PHPUnit</li>
     <li>Shapely / Fiona</li>
     <li>OpenCV</li>
@@ -110,7 +112,7 @@
   <ul>
     <li>Recommender systems</li>
     <li><span class="tooltip">Machine learning
-      <span>(e.g. decision trees, neural nets, natural language analysis</span>
+      <span>decision trees, neural nets, natural language analysis</span>
     </span></li>
     <li>Data visualization / plots</li>
     <li>Data mining / webscraping</li>
