--- a/index.html
+++ b/index.html
@@ -1,249 +1,193 @@
-<!doctype html>
-
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <title>Mice Pápai CV</title>
-
-  <link rel="stylesheet" type="text/css" href="css/q.min.css">
-
-  <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
-  <link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="favicon/apple-icon-76x76.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="favicon/apple-icon-114x114.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="favicon/apple-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="favicon/apple-icon-144x144.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="favicon/apple-icon-152x152.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-icon-180x180.png">
-  <link rel="icon" type="image/png" sizes="192x192"  href="favicon/android-icon-192x192.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="favicon/favicon-96x96.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
-  <link rel="manifest" href="favicon/manifest.json">
-  <meta name="msapplication-TileColor" content="#161816">
-  <meta name="msapplication-TileImage" content="/favicon/ms-icon-144x144.png">
-  <meta name="theme-color" content="#161816">
-
-  <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.css" />
-  <script src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.js"></script>
-  <script src="js/cookie.js"></script>
-</head>
-<body>
-
-  <div class="header">
-    <img src="/img/portrait_bw.jpg" class="portrait">
-    <h1 class="title"><a id="section-mice-pápai" class="anchor" href="#mice-p%C3%A1pai" aria-hidden="true"><span class="section"></span></a>Mice Pápai</h1>
-  </div>
-
-  <div class="main-content">
-  <div class="column">
-  <h2>
-  <a id="section-skills" class="anchor" href="#skills" aria-hidden="true"><span class="section"></span></a>Skills</h2>
-  <h3>
-  <a id="section-proficient" class="anchor" href="#proficient" aria-hidden="true"><span class="section"></span></a>Proficient</h3>
-  <ul>
-    <li>Python</li>
-    <li>PHP</li>
-    <li>Javascript</li>
-    <li>Linux (mainly debian)</li>
-  </ul>
-  <h3>
-  <a id="section-comfortable" class="anchor" href="#comfortable" aria-hidden="true"><span class="section"></span></a>Comfortable</h3>
-  <ul>
-    <li>Git</li>
-    <li>SQL (MySQL, PostgreSQL)</li>
-    <li>CSS (sass) / HTML5</li>
-    <li>MacOS</li>
-  </ul>
-  <h3>
-  <a id="section-familiar" class="anchor" href="#familiar" aria-hidden="true"><span class="section"></span></a>Familiar</h3>
-  <ul>
-    <li>Java (Android)</li>
-    <li>Racket (Scheme)</li>
-    <li>Nim</li>
-    <li>Windows</li>
-  </ul>
-  <h3>
-  <a id="section-others" class="anchor" href="#others" aria-hidden="true"><span class="section"></span></a>Others</h3>
-  <ul>
-    <li>Analog / Digital Photography</li>
-    <li>Photomanipulation</li>
-    <li>Vector graphics</li>
-    <li>Video editing</li>
-    <li>Laser cutting (GRBL)</li>
-    <li>Adwords / Adsense / Analytics</li>
-    <li>Pharmacology / Biology</li>
-  </ul>
-  <h2>
-  <a id="section-languages" class="anchor" href="#languages" aria-hidden="true"><span class="section"></span></a>Languages</h2>
-  <ul>
-    <li>Native: Hungarian</li>
-    <li>Advanced: English</li>
-    <li>Basic: Spanish</li>
-  </ul>
-
-  <h3>
-    <a id="section-libraries-and-frameworks" class="anchor" href="#libraries-and-frameworks" aria-hidden="true"><span class="section"></span></a>
-    Libraries and Frameworks
-  </h3>
-
-  <ul>
-    <li>Django, Flask and AIOHTTP</li>
-    <li>PyTest and Hypothesis</li>
-    <li>BeautifulSoup, Selenium</li>
-    <li>Pandas, Scikit-learn</li>
-    <li>Wordpress, Drupal</li>
-    <li>PHPUnit</li>
-    <li>Shapely / Fiona</li>
-    <li>OpenCV</li>
-    <li>Arcpy</li>
-    <li>Vue.js</li>
-  </ul>
-
-</div>
-
-<div class="column">
-
-  <h2>
-  <a id="section-experience" class="anchor" href="#experience" aria-hidden="true"><span class="section"></span></a>Experience</h2>
-  <ul>
-    <li>Recommender systems</li>
-    <li><span class="tooltip">Machine learning
-      <span>decision trees, neural nets, natural language analysis</span>
-    </span></li>
-    <li>Data visualization / plots</li>
-    <li>Data mining / webscraping</li>
-    <li>Bioinformatics</li>
-    <li>Chrome extensions</li>
-    <li>Anki plugins</li>
-    <li><span class="tooltip">
-      Project Euler
-      <span>951254_jAI9nTAjpXMOjMVTxGduFdADtBtdw95q</span></span></li>
-    <li><span class="tooltip">
-      APIs
-      <span>
-        Last.fm, Reddit, Tumblr, Steem, Ebay, Flickr,<br />
-        Twitter, Instagram, Facebook, Google APIs
-      </span>
-    </span></li>
-    <li>Gephi</li>
-  </ul>
-
-  <h3>
-    <a id="section-endless-flux-labs" class="anchor" href="#endless-flux-labs" aria-hidden="true"><span class="section"></span></a>
-    Endless Flux Labs (2018-)
-  </h3>
-
-  <h3>
-    <a id="section-freelance-projects" class="anchor" href="#freelance-projects" aria-hidden="true"><span class="section"></span></a>
-    Freelance projects (2016-2018)
-  </h3>
-
-  <h2>
-  <a id="section-education" class="anchor" href="#education" aria-hidden="true"><span class="section"></span></a>Education</h2>
-  <h3>
-  <a id="section-university" class="anchor" href="#university" aria-hidden="true"><span class="section"></span></a>University</h3>
-  <ul>
-    <li>Semmelweis University, Pharmacology (2015)</li>
-    <li>ELTE, Chemistry (2014)</li>
-  </ul>
-  <h3>
-  <a id="section-high-school" class="anchor" href="#high-school" aria-hidden="true"><span class="section"></span></a>High School</h3>
-  <h4>
-  <a id="section-2009-2014-szent-lászló-gimnázium" class="anchor" href="#2009-2014-szent-l%C3%A1szl%C3%B3-gimn%C3%A1zium" aria-hidden="true"><span class="section"></span></a>2009-2014: Szent László Gimnázium</h4>
-  <ul>
-    <li>2012-2014: Informatics</li>
-    <li>2009-2012: Mass Communication</li>
-  </ul>
-  <h4>
-  <a id="section-exit-exam-results" class="anchor" href="#exit-exam-results" aria-hidden="true"><span class="section"></span></a>Exit Exam Results</h4>
-
-  <input type="checkbox" class="show-exam-results" id="show-exam-results">
-  <label for="show-exam-results"></label>
-
-  <table class="exam-results">
-    <thead>
-      <tr>
-        <th align="left">Subject</th>
-        <th align="left">Level</th>
-        <th align="right">%</th>
-        <th align="right">Grade</th>
-        <th align="right">Year</th>
-        <th align="left">Comment</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td align="left">Biology</td>
-        <td align="left">advanced</td>
-        <td align="right">83</td>
-        <td align="right">5</td>
-        <td align="right">2015</td>
-        <td align="left">required for SOTE Pharmacology</td>
-      </tr>
-      <tr>
-        <td align="left">Informatics</td>
-        <td align="left">advanced</td>
-        <td align="right">86</td>
-        <td align="right">5</td>
-        <td align="right">2014</td>
-        <td align="left">100% verbal exam</td>
-      </tr>
-      <tr>
-        <td align="left">Chemistry</td>
-        <td align="left">advanced</td>
-        <td align="right">68</td>
-        <td align="right">5</td>
-        <td align="right">2014</td>
-        <td align="left">required for ELTE Chemistry</td>
-      </tr>
-      <tr>
-        <td align="left">English</td>
-        <td align="left">basic</td>
-        <td align="right">92</td>
-        <td align="right">5</td>
-        <td align="right">2014</td>
-        <td align="left">-</td>
-      </tr>
-      <tr>
-        <td align="left">Hungarian</td>
-        <td align="left">basic</td>
-        <td align="right">91</td>
-        <td align="right">5</td>
-        <td align="right">2014</td>
-        <td align="left">-</td>
-      </tr>
-      <tr>
-        <td align="left">Mathematics</td>
-        <td align="left">basic</td>
-        <td align="right">81</td>
-        <td align="right">5</td>
-        <td align="right">2014</td>
-        <td align="left">-</td>
-      </tr>
-      <tr>
-        <td align="left">History</td>
-        <td align="left">basic</td>
-        <td align="right">65</td>
-        <td align="right">4</td>
-        <td align="right">2014</td>
-        <td align="left">-</td>
-      </tr>
-    </tbody>
-  </table>
-
-  <h2>Contact</h2>
-  <p>
-    <a href="tel:+36706325138"><span class="tooltip">Phone<span>+36 70 632 51 38</span></span></a><br />
-    <a href="https://t.me/knockoutMice"><span class="tooltip">Telegram<span>knockoutMice</span></span></a><br />
-    <a href="mailto:qwhexz@gmail.com"><span class="tooltip">Email<span>qwhexz@gmail.com</span></span></a>
-  </p>
-
-  </div>
-  </div>
-
-</body>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Mice Pápai CV</title>
+    <link rel="stylesheet" type="text/css" href="css/q.min.css">
+    <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+    <link rel="manifest" href="favicon/manifest.json">
+    <meta name="msapplication-TileColor" content="#161816">
+    <meta name="msapplication-TileImage" content="/favicon/ms-icon-144x144.png">
+    <meta name="theme-color" content="#161816">
+    <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.css">
+    <script src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.js"></script>
+    <script src="js/cookie.js"></script>
+  </head>
+  <body>
+    <div class="header"><img src="/img/portrait_bw.jpg" class="portrait">
+      <h1 class="title"><a id="section-mice-pápai" href="#mice-p%C3%A1pai" aria-hidden="true" class="anchor"><span class="section"></span></a>Mice Pápai</h1>
+    </div>
+    <div class="main-content">
+      <div class="column">
+        <h2><a id="section-skills" href="#skills" aria-hidden="true" class="anchor"><span class="section"></span></a>Skills</h2>
+        <h3><a id="section-proficient" href="#proficient" aria-hidden="true" class="anchor"><span class="section"></span></a>Proficient</h3>
+        <ul>
+          <li>Python</li>
+          <li>PHP</li>
+          <li>Javascript</li>
+          <li>Linux (mainly debian)</li>
+        </ul>
+        <h3><a id="section-comfortable" href="#comfortable" aria-hidden="true" class="anchor"><span class="section"></span></a>Comfortable</h3>
+        <ul>
+          <li>Git</li>
+          <li>SQL (MySQL, PostgreSQL)</li>
+          <li>CSS (sass) / HTML5</li>
+          <li>MacOS</li>
+        </ul>
+        <h3><a id="section-familiar" href="#familiar" aria-hidden="true" class="anchor"><span class="section"></span></a>Familiar</h3>
+        <ul>
+          <li>Java (Android)</li>
+          <li>Racket (Scheme)</li>
+          <li>Nim</li>
+          <li>Windows</li>
+        </ul>
+        <h3><a id="section-others" href="#others" aria-hidden="true" class="anchor"><span class="section"></span></a>Others</h3>
+        <ul>
+          <li>Analog / Digital Photography</li>
+          <li>Photomanipulation</li>
+          <li>Vector graphics</li>
+          <li>Video editing</li>
+          <li>Laser cutting (GRBL)</li>
+          <li>Adwords / Adsense / Analytics</li>
+          <li>Pharmacology / Biology</li>
+        </ul>
+        <h2><a id="section-languages" href="#languages" aria-hidden="true" class="anchor"><span class="section"></span></a>Languages</h2>
+        <ul>
+          <li>Native: Hungarian</li>
+          <li>Advanced: English</li>
+          <li>Basic: Spanish</li>
+        </ul>
+        <h3><a id="section-libraries-and-frameworks" href="#libraries-and-frameworks" aria-hidden="true" class="anchor"><span class="section"></span></a>Libraries and Frameworks</h3>
+        <ul>
+          <li>Django, Flask and AIOHTTP</li>
+          <li>PyTest and Hypothesis</li>
+          <li>BeautifulSoup, Selenium</li>
+          <li>Pandas, Scikit-learn</li>
+          <li>Wordpress, Drupal</li>
+          <li>PHPUnit</li>
+          <li>Shapely / Fiona</li>
+          <li>OpenCV</li>
+          <li>Arcpy</li>
+          <li>Vue.js</li>
+        </ul>
+      </div>
+      <div class="column">
+        <h2><a id="section-experience" href="#experience" aria-hidden="true" class="anchor"><span class="section"></span></a>Experience</h2>
+        <ul>
+          <li>Recommender systems</li>
+          <li><span class="tooltip">Machine learning<span>decision trees, neural nets, natural language analysis</span></span></li>
+          <li>Data visualization / plots</li>
+          <li>Data mining / webscraping</li>
+          <li>Bioinformatics</li>
+          <li>Chrome extensions</li>
+          <li>Anki plugins</li>
+          <li><span class="tooltip">Project Euler<span>951254_jAI9nTAjpXMOjMVTxGduFdADtBtdw95q</span></span></li>
+          <li><span class="tooltip">APIs<span>Last.fm, Reddit, Tumblr, Steem, Ebay, Flickr,<br>Twitter, Instagram, Facebook, Google APIs</span></span></li>
+          <li>Gephi</li>
+        </ul>
+        <h3><a id="section-endless-flux-labs" href="#endless-flux-labs" aria-hidden="true" class="anchor"><span class="section"></span></a>    Endless Flux Labs (2018-)</h3>
+        <h3><a id="section-freelance-projects" href="#freelance-projects" aria-hidden="true" class="anchor"><span class="section"></span></a>    Freelance projects (2016-2018)</h3>
+        <h2><a id="section-education" href="#education" aria-hidden="true" class="anchor"><span class="section"></span></a>Education</h2>
+        <h3><a id="section-university" href="#university" aria-hidden="true" class="anchor"><span class="section"></span></a>University</h3>
+        <ul>
+          <li>Semmelweis University, Pharmacology (2015)</li>
+          <li>ELTE, Chemistry (2014)</li>
+        </ul>
+        <h3><a id="section-high-school" href="#high-school" aria-hidden="true" class="anchor"><span class="section"></span></a>High School</h3>
+        <h4><a id="section-2009-2014-szent-lászló-gimnázium" href="#2009-2014-szent-l%C3%A1szl%C3%B3-gimn%C3%A1zium" aria-hidden="true" class="anchor"><span class="section"></span></a>2009-2014: Szent László Gimnázium</h4>
+        <ul>
+          <li>2012-2014: Informatics</li>
+          <li>2009-2012: Mass Communication</li>
+        </ul>
+        <h4><a id="section-exit-exam-results" href="#exit-exam-results" aria-hidden="true" class="anchor"><span class="section"></span></a>Exit Exam Results</h4>
+        <input id="show-exam-results" type="checkbox" class="show-exam-results">
+        <label for="show-exam-results"></label>
+        <table class="exam-results">
+          <thead>
+            <tr>
+              <th align="left">Subject</th>
+              <th align="left">Level</th>
+              <th align="right">%</th>
+              <th align="right">Grade</th>
+              <th align="right">Year</th>
+              <th align="left">Comment</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td align="left">Biology</td>
+              <td align="left">advanced</td>
+              <td align="right">83</td>
+              <td align="right">5</td>
+              <td align="right">2015</td>
+              <td align="left">required for SOTE Pharmacology</td>
+            </tr>
+            <tr>
+              <td align="left">Informatics</td>
+              <td align="left">advanced</td>
+              <td align="right">86</td>
+              <td align="right">5</td>
+              <td align="right">2014</td>
+              <td align="left">100% verbal exam</td>
+            </tr>
+            <tr>
+              <td align="left">Chemistry</td>
+              <td align="left">advanced</td>
+              <td align="right">68</td>
+              <td align="right">5</td>
+              <td align="right">2014</td>
+              <td align="left">required for ELTE Chemistry</td>
+            </tr>
+            <tr>
+              <td align="left">English</td>
+              <td align="left">basic</td>
+              <td align="right">92</td>
+              <td align="right">5</td>
+              <td align="right">2014</td>
+              <td align="left">-</td>
+            </tr>
+            <tr>
+              <td align="left">Hungarian</td>
+              <td align="left">basic</td>
+              <td align="right">91</td>
+              <td align="right">5</td>
+              <td align="right">2014</td>
+              <td align="left">-</td>
+            </tr>
+            <tr>
+              <td align="left">Mathematics</td>
+              <td align="left">basic</td>
+              <td align="right">81</td>
+              <td align="right">5</td>
+              <td align="right">2014</td>
+              <td align="left">-</td>
+            </tr>
+            <tr>
+              <td align="left">History</td>
+              <td align="left">basic</td>
+              <td align="right">65</td>
+              <td align="right">4</td>
+              <td align="right">2014</td>
+              <td align="left">-</td>
+            </tr>
+          </tbody>
+        </table>
+        <h2>Contact</h2>
+        <p><a href="tel:+36706325138"><span class="tooltip">Phone<span>+36 70 632 51 38</span></span></a><br><a href="https://t.me/knockoutMice"><span class="tooltip">Telegram<span>knockoutMice</span></span></a><br><a href="mailto:qwhexz@gmail.com"><span class="tooltip">Email<span>qwhexz@gmail.com</span></span></a></p>
+      </div>
+    </div>
+  </body>
 </html>
